airflow/mnt/logs/scheduler/2024-03-09/weather_api__dag_2.py.log
[2024-03-09T02:34:04.926+0000] {processor.py:161} INFO - Started process (PID=783) to work on /opt/airflow/dags/weather_api__dag_2.py
[2024-03-09T02:34:04.927+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/weather_api__dag_2.py for tasks to queue
[2024-03-09T02:34:04.927+0000] {logging_mixin.py:188} INFO - [2024-03-09T02:34:04.927+0000] {dagbag.py:538} INFO - Filling up the DagBag from /opt/airflow/dags/weather_api__dag_2.py
[2024-03-09T02:34:04.929+0000] {logging_mixin.py:188} INFO - [2024-03-09T02:34:04.929+0000] {dagbag.py:348} ERROR - Failed to import: /opt/airflow/dags/weather_api__dag_2.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 344, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/weather_api__dag_2.py", line 19
    ``
    ^
SyntaxError: invalid syntax
[2024-03-09T02:34:04.930+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/weather_api__dag_2.py
[2024-03-09T02:34:04.951+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/weather_api__dag_2.py took 0.028 seconds
[2024-03-09T02:34:35.446+0000] {processor.py:161} INFO - Started process (PID=833) to work on /opt/airflow/dags/weather_api__dag_2.py
[2024-03-09T02:34:35.447+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/weather_api__dag_2.py for tasks to queue
[2024-03-09T02:34:35.448+0000] {logging_mixin.py:188} INFO - [2024-03-09T02:34:35.447+0000] {dagbag.py:538} INFO - Filling up the DagBag from /opt/airflow/dags/weather_api__dag_2.py
[2024-03-09T02:34:35.450+0000] {logging_mixin.py:188} INFO - [2024-03-09T02:34:35.449+0000] {dagbag.py:348} ERROR - Failed to import: /opt/airflow/dags/weather_api__dag_2.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 344, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/weather_api__dag_2.py", line 19
    ``
    ^
SyntaxError: invalid syntax
[2024-03-09T02:34:35.450+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/weather_api__dag_2.py
[2024-03-09T02:34:35.473+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/weather_api__dag_2.py took 0.029 seconds
[2024-03-09T02:35:05.968+0000] {processor.py:161} INFO - Started process (PID=889) to work on /opt/airflow/dags/weather_api__dag_2.py
[2024-03-09T02:35:05.969+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/weather_api__dag_2.py for tasks to queue
[2024-03-09T02:35:05.971+0000] {logging_mixin.py:188} INFO - [2024-03-09T02:35:05.970+0000] {dagbag.py:538} INFO - Filling up the DagBag from /opt/airflow/dags/weather_api__dag_2.py
[2024-03-09T02:35:05.978+0000] {logging_mixin.py:188} INFO - [2024-03-09T02:35:05.976+0000] {dagbag.py:348} ERROR - Failed to import: /opt/airflow/dags/weather_api__dag_2.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 344, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/weather_api__dag_2.py", line 19
    ``
    ^
SyntaxError: invalid syntax
[2024-03-09T02:35:05.978+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/weather_api__dag_2.py
[2024-03-09T02:35:06.010+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/weather_api__dag_2.py took 0.045 seconds
